<resources>
    <string name="title_app">Quản lý tạp hóa</string>
    <string name="facebook">Facebook</string>
    <string name="twistter">Twistter</string>
    <string name="google">Google</string>
    <string name="or_with_underline">_________ Hoặc _________</string>
    <string name="login">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_password">Quên mật khẩu? </string>
    <string name="remember_account">Lưu tài khoản</string>
    <string name="password">Mật khẩu</string>
    <string name="email">Email</string>
    <string name="logo">Logo</string>
    <string name="name">Họ tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="back">Trở Về</string>
    <string name="home">Trang chủ</string>
    <string name="Setting">Cài đặt</string>
    <string name="Functions">Chức năng</string>
    <string name="NewProduct">Sản phẩm mới</string>
    <string name="product">Sản phẩm</string>
    <string name="Employee">Nhân viên</string>
    <string name="Depot">Kho hàng</string>
    <string name="Orders">Hóa đơn</string>
    <string name="Qr">Qr Code</string>
    <string name="Statistics">Thống kê</string>
    <string name="emptyDepot">Kho hàng trống</string>
    <string name="addProduct">Thêm sản phẩm</string>
    <string name="add">Thêm</string>
    <string name="depot">Kho Hàng</string>
    <string name="idProduct">Mã sản phẩm</string>
    <string name="nameProduct">Tên sản phẩm</string>
    <string name="expiredDate">Hạn sử dụng</string>
    <string name="quantity">Số lượng</string>
    <string name="typeProduct">Loại sản phẩm</string>
    <string name="originalPrice">Giá nhập</string>
    <string name="price">Giá bán</string>
    <string name="scanCode">Quét mã</string>
    <string name="description">Mô tả</string>
    <string name="image">Ảnh</string>
    <string name="chooseImage">Chọn ảnh</string>
    <string name="noImage">Chưa có ảnh</string>
    <string name="addImage">Thêm ảnh</string>
    <string name="notification">Thông báo</string>
    <string name="entryDate">Ngày nhập</string>
    <string name="remaining">Còn lại</string>
    <string name="month">tháng</string>
    <string name="noEmail">Chưa có email</string>
    <string name="noPassword">Chưa có mật khẩu</string>
    <string name="IncorectEmailFormat">Định dạng email không đúng</string>
    <string name="loginFailed">Đăng nhập thất bại</string>
    <string name="tryAgain">Thử lại</string>
    <string name="DoYouWantToSignOut">Bạn có muốn đăng xuất?</string>
    <string name="cancel">Hủy</string>
    <string name="confirm">Xác nhận</string>
    <string name="noName">Chưa có họ tên</string>
    <string name="passwordDontMatch">Mật khẩu không khớp</string>
    <string name="registerSuccess">Đăng ký thành công</string>
    <string name="error">Lỗi</string>
    <string name="registerFailed">Đăng ký thất bại</string>
    <string name="noIdProduct">Chưa có mã sản phẩm</string>
    <string name="noNameProduct">Chưa có tên sản phẩm</string>
    <string name="noQuantity">Chưa có số lượng</string>
    <string name="noOriginalPrice">Chưa có giá nhập</string>
    <string name="noPrice">Chưa có giá bán</string>
    <string name="addProductSuccess">Thêm sản phẩm thành công</string>
    <string name="addProductFailure">Thêm sản phẩm thất bại</string>
    <string name="noDescription">Chưa có mô tả</string>
    <string name="edit">Sửa</string>
    <string name="addToOrder">Thêm vào giỏ</string>
    <string name="readProductFailure">Đọc thông tin sản phẩm không thành công</string>
    <string name="deleteProduct">Bạn có muốn xóa sản phẩm này</string>
    <string name="deleteProductSuccess">Xóa sản phẩm thành công</string>
    <string name="deleteProductFailure">Xóa sản phẩm thất bại</string>
    <string name="one">1</string>
    <string name="updateProduct">Cập nhật sản phẩm</string>
    <string name="update">Cập nhật</string>
    <string name="updateProductSuccess">Cập nhật sản phẩm thành công</string>
    <string name="updateProductFailure">Cập nhật sản phẩm thất bại</string>
    <string name="priceProduct">Giá sản phẩm</string>
    <string name="addToCartSuccess">Đã thêm vào giỏ hàng</string>
    <string name="updateToCartSuccess">Cập nhật sản phẩm trong giỏ hàng</string>
    <string name="addToCartFailure">Thêm vào giỏ hàng thất bại</string>
    <string name="readDepotFailure">Đọc kho hàng thất bại</string>
    <string name="cart">Giỏ hàng</string>
    <string name="noProduct">Chưa có sản phẩm</string>
    <string name="createOrder">Tạo đơn</string>
    <string name="readCartFailure">Đọc giỏ hàng thất bại</string>
    <string name="deleteCartSuccess">Đã xóa sản phẩm khỏi giỏ</string>
    <string name="deleteCartFailure">Xóa sản phẩm khỏi giỏ thất bại</string>
    <string name="deleteCart">Bạn có muốn xóa sản phẩm này khỏi giỏ?</string>
    <string name="createOrderFailure">Tạo đơn hàng thất bại</string>
    <string name="createOrderSuccess">Tạo đơn hàng thành công</string>
    <string name="emptyCart">Chưa có sản phẩm trong giỏ hàng</string>
    <string name="totalPrice">Tổng tiền</string>
    <string name="quantityNotEnough">Số lượng không đủ</string>
    <string name="checkPrice">Giá bán phải lớn hơn giá nhập</string>
    <string name="buyProduct">Sản phẩm mua</string>
    <string name="creationDate">Ngày lập</string>
    <string name="employeeCreation">Người lập</string>
    <string name="detailOrder">Chi tiết hóa đơn</string>
    <string name="idOrder">Mã hóa đơn</string>
    <string name="readOrderFailure">Đọc đơn hàng thất bại</string>
    <string name="revenueStatistics">Thống kê doanh thu</string>
    <string name="emptyOrder">Không có đơn hàng</string>
    <string name="search">Tìm kiếm</string>
    <string name="searchFailure">Tìm kiếm xảy ra lỗi</string>
    <string name="addToCart">Bạn có muốn thêm sản phẩm vào giỏ hàng</string>
    <string name="productExpiredDate">Sản phẩm sắp hết hạn sử dụng</string>
    <string name="productOutExpiredDate">Sản phẩm đã quá hạn sử dụng</string>
    <string name="expiredQuantity">Số lượng trong kho sắp hết</string>
    <string name="close">Đóng</string>
    <string name="emptyNotification">Chưa có thông báo</string>
    <string name="account">Tài khoản</string>
    <string name="logout">Đăng xuất</string>
    <string name="doYouWantLogout">Bạn có muốn đăng xuất</string>
    <string name="weJustSendVerifiedToYourEmail">Chúng tôi đã gửi xác thực đến email của bạn. Kiểm tra email để xác thực tài khoản</string>
    <string name="emailNotVerified">Tài khoản chưa được xác thực</string>
    <string name="sendAgain">Gửi lại</string>
    <string name="readNotificationFailure">Đọc thông báo thất bại</string>
    <string name="deleteNotificationSuccess">Xóa thông báo thành công</string>
    <string name="deleteNotificationFailure">Xóa thông báo thất bại</string>
    <string name="deleteNotification">Bạn có muốn xóa thông báo này</string>
    <string name="doYouWantCreateOrder">Bạn có muốn tạo đơn hàng này</string>
    <string name="BestSalesProduct">Sản phẩm bán chạy</string>
    <string name="LeastSalesProduct">Sản phẩm bán kém</string>
    <string name="emptyBestSalesProduct">Chưa có sản phẩm bán chạy</string>
    <string name="emptyLeastSalesProduct">Chưa có sản phẩm bán kém</string>
    <string name="loading">Đang tải...</string>
    <string name="productIsDelete">Sản phẩm không còn trên hệ thống</string>
</resources>